--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p class="package">Free</p>
       <p class="price">$0</p>
       <p class="text">Some description about why this package is the best.</p>
-      <button class="#">Subscribe</button>
+      <a href="#" class="button">Subscribe</a>      
       <ol>
         <li>Feature 1</li>
         <li>Feature 2</li>
@@ -23,7 +23,7 @@
       <p class="package">Basic</p>
       <p class="price">$20/month</p>
       <p class="text">Some description about why this package is the best.</p>
-      <button class="#">Subscribe</button>
+      <a href="#" class="button">Subscribe</a>
       <ol>
         <li>Feature 1</li>
         <li>Feature 2</li>
@@ -36,7 +36,7 @@
       <p class="package">Premium</p>
       <p class="price">$100/month</p>
       <p class="text">Some description about why this package is the best.</p>
-      <button class="#">Subscribe</button>
+      <a href="#" class="button">Subscribe</a>
       <ol>
         <li>Feature 1</li>
         <li>Feature 2</li>
